# HBatteries

./: HBatteries.cabal  stack.yaml
app/: Main.hs
src/HBatteries/: CSV.hs  CSV1.hs  Serial.hs
