name:                HBatteries
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/HBatteries#readme
license:             BSD3
license-file:        LICENSE
author:              Dilawar Singh
maintainer:          dilawar.s.rajput@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HBatteries.CSV
                       , HBatteries.CSV1
                       , HBatteries.Serial
                        
  build-depends:       base >= 4.7 && < 5, cassava >= 0.4, vector
                        , bytestring, attoparsec, unordered-containers
                        , bytestring-lexing >= 0.5
                        , parsec 
                        , serialport 
  default-language:    Haskell2010

executable HBatteries-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HBatteries
  default-language:    Haskell2010

test-suite HBatteries-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HBatteries
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dilawar/HBatteries
